# dx9-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
ext/bridge/: bridge.cpp
include/: bridge.hpp  bridge_bindings.rs  ex_c.h  ex_rust.h
shader/: shader.hlsl
src/: core.rs  ext.rs  lib.rs  w32a.rs
src/core/: dx9c.rs  prim.rs  space.rs
src/core/prim/: xmat.rs
src/ext/: bridge.rs  pvec.rs  ts.rs
src/ext/bridge/: cppbridge.rs
src/w32a/: unwind.rs  utl.rs  wm.rs
