[package]
name = "dx9"
version = "0.1.5" # change with html_root_url in lib.rs
edition = "2024"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "Rust library for DirectX 9.0c"
keywords = ["directx", "opengl", "windows", "graphics", "3D"]
categories = ["simulation", "rendering", "science", "external-ffi-bindings"]
license = "MIT"

documentation = "https://docs.rs/dx9/"
homepage = "https://crates.io/crates/dx9"
repository = "https://github.com/nomissbowling/dx9-rs"

readme = "README.md"

#build = "build.rs"

[lib]
name = "dx9"

# [lints]
# workspace = true

# [dependencies.windows]
# # workspace = true
# version = ">=0.59, <=0.62"
# features = [
#   "Data_Xml_Dom",
#   "Win32_Foundation",
#   "Win32_Security",
#   "Win32_System_Threading",
#   "Win32_System_LibraryLoader",
#   "Win32_Media",
#   "Win32_Graphics_Gdi",
#   "Win32_UI_Input",
#   "Win32_UI_Input_KeyboardAndMouse",
#   "Win32_UI_WindowsAndMessaging"]

[dependencies]
windows = {version = "=0.62.2", features = [
  "Data_Xml_Dom",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_Media",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"]}
# windows-result = {version = "=0.4.1"} # included by Win32::core

asciiz = {version = "0.1"}
# anyslot = {version = "0.1"}

# home = {version = "0.5.5"} # cc(1.0.79)/bindgen(0.65.1) requires home(0.5.5)
home = {version = "=0.5.12"} # cc(1.2.53)/bindgen(0.72.1) requires home(0.5.12)

[build-dependencies]
cc = "=1.2.53" # "1.0.79"
bindgen = "=0.72.1" # "0.65.1"

[package.metadata.docs.rs]
# https://docs.rs/about/metadata
targets = ["x86_64-pc-windows-msvc"]
rustc-args = ["--cfg", "cfg_docs"] # #[cfg(cfg_docs)] or #[cfg(docsrs)]
# https://docs.rs/about/builds
